--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "leaflet": "^1.9.3"
+    "leaflet": "^1.9.3",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.28.0"
   }
 }
